# spatial_functa

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/downstream/: check_functaset.py  create_functaset.py  dataloader_functaset.py  train.py
experiments/downstream/config/: classifier_model.py  create_functaset.py  dataset.py  functa_dataset.py  functaset.py  scheduler.py  train_functaset.py
experiments/fitting/: dataloader.py  train.py  train_autodecoding.py
experiments/fitting/config/: config.py  dataset.py  model.py  scheduler.py
experiments/training/: train.py
experiments/training/config/: config.py  model.py  scheduler.py
spatial_functa/: __init__.py  classifier_trainer.py  dataloader.py  grad_acc.py  metrics.py  nn_utils.py  opt_builder.py  shape_trainer.py  shape_trainer_autodecoding.py  trainer.py
spatial_functa/model/: autodecoding_spatial_functa.py  interpolation.py  mlp.py  model_utils.py  spatial_functa.py  transformer.py
