[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
py-modules = ["spatial_functa"]


[project]
name = "spatial_functa"
version = "0.1.0"
description = "A description of your package"
authors = [{name = "Samuele PApa", email = "samuele.papa@gmail.com"}]
license = {text = "MIT License"}
requires-python = ">= 3.10"
dependencies = ["flax", "optax", "ml_collections", "tqdm", "matplotlib", "wandb", "h5py"]

[project.urls]
homepage = "https://github.com/samuelepapa/spatial_functa"
documentation = "https://github.com/samuelepapa/spatial_functa/wiki"
source = "https://github.com/samuelepapa/spatial_functa"
bug-reports = "https://github.com/samuelepapa/spatial_functa/issues"
